--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-jest": "^27.2.5",
     "jest": "^27.2.5"
   },
+  "type": "module",
   "dependencies": {
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
