--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "simply-reactive",
-  "version": "1.0.0",
+  "name": "@wildfluss/simply-reactive",
+  "version": "1.0.3",
   "description": "reactive object",
   "main": "main.js",
   "scripts": {
